# checkers

./: .gitattributes  pyproject.toml
data/: index.json
src/checkersai/: __main__.py  _version.py  board.py  computeropponent.py  game.py  graphics.py  humanplayer.py
